# whispercrabs

./: CHANGELOG.md  Cargo.toml  README.md  justfile
src/: api.rs  audio.rs  config.rs  db.rs  local_stt.rs  main.rs  ui.rs
src/tests/: api_tests.rs  audio_tests.rs  config_load_tests.rs  mod.rs
