[package]
name = "whispercrabs"
version = "0.1.20"
edition = "2024"
rust-version = "1.85"
authors = ["Adolfo Usier"]
license = "MIT"
description = "Floating voice-to-text tool with local and API-based transcription"
repository = "https://github.com/adolfousier/whispercrabs"
homepage = "https://github.com/adolfousier/whispercrabs"
readme = "README.md"
keywords = ["whisper", "speech-to-text", "transcription", "gtk4", "voice"]
categories = ["multimedia::audio", "gui"]
exclude = ["src/screenshots/*", ".github/*", ".DS_Store"]

[dependencies]
gtk4 = "0.9"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["multipart", "json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6"
whisper-rs = "0.15"
rubato = "0.14"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
arboard = "3"

[dev-dependencies]
tempfile = "3"
